--- a/.github/workflows/02.1.continuous.delivery.yml
+++ b/.github/workflows/02.1.continuous.delivery.yml
@@ -51,8 +51,7 @@ jobs:
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
-          if git tag -a "$new_version" -m "Version $new_version"; then
-            git push origin "$new_version"
-          fi
+          git tag -a "$new_version" -m "Version $new_version"
+          git push origin "$new_version"
         env:
           new_version: ${{ steps.get_new_version.outputs.new_version }}-pre-release
