--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -35,7 +35,8 @@ jobs:
           pip install -r requirements.txt
       - name: Build Site
         run: |
-          python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
+          # python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
+          python -m mkdocs build --clean --verbose --site-dir '${{ env.SITE_DIR }}'
       - name: Create Pre-Release
         uses: softprops/action-gh-release@v1
         with:
