--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Create Pre-Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ env.SITE_DIR }}
+          files: "${{ env.SITE_DIR }}/**"
           prerelease: true
           generate_release_notes: true
           fail_on_unmatched_files: true
