--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -7,7 +7,8 @@ on:
   workflow_dispatch: {}
 
 permissions:
-  contents: read
+  discussions: write
+  contents: write
   packages: write
   pages: write
 
