Push tag if only new one was created

--- a/.github/workflows/02.1.continuous.delivery.yml
+++ b/.github/workflows/02.1.continuous.delivery.yml
@@ -51,7 +51,10 @@ jobs:
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
-          git tag -a "$new_version" -m "Version $new_version"
-          git push origin "$new_version"
+          if git tag -a "$new_version" -m "Version $new_version"; then
+            git push --follow-tags origin "$new_version"
+          else
+            echo "Failed to creat tag $new_version, it probably already exists"
+          fi
         env:
           new_version: ${{ steps.get_new_version.outputs.new_version }}-pre-release
