--- a/.github.reference/workflows/01.1.continuous.integration.yml
+++ b/.github.reference/workflows/01.1.continuous.integration.yml
@@ -14,7 +14,7 @@ permissions:
 
 env:
   CI: true
-  SITE_DIR: _site
+  SITE_DIR: site
   TETRIS_APP_HOST: "127.0.0.1"
   TETRIS_APP_PORT: "8080"
   TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
