--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -70,7 +70,7 @@ jobs:
                 prerelease: true,
                 discussion_category_name: 'Announcements',
                 generate_release_notes: true,
-                make_latest: true,
+                make_latest: 'true',
                 headers: {
                   'X-GitHub-Api-Version': '2022-11-28'
                 }
