--- a/.github/workflows/1.1.continuous.integration.yml
+++ b/.github/workflows/1.1.continuous.integration.yml
@@ -1,4 +1,4 @@
-name: Run Checks
+name: 1.1 Run Checks on PR
 
 on:
   pull_request:
@@ -8,62 +8,70 @@ on:
 
 permissions:
   actions: write
+  checks: write
   contents: read
   security-events: write
-  checks: write
 
 env:
   CI: true
   SITE_DIR: site
   TETRIS_APP_HOST: "127.0.0.1"
   TETRIS_APP_PORT: "8080"
-  TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
+  TETRIS_APP_PATH: "github-devsecops-fundamentals"
 
 jobs:
   quality-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.12
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Install Python dependencies
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.ci.txt
-      - name: Install NodeJS dependencies
-        run: npm ci
-      - name: Test Site Build
+          npm ci
+          npx playwright install --with-deps
+
+      - name: Build
         run: |
           python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: npx playwright test
+
+      - name: Functional test
+        run: |
+          npx playwright test
+
   security-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.12
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Install Python dependencies
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Install node dependencies
-        run: npm ci
+          pip install -r requirements.ci.txt
+          npm ci
+          npx playwright install --with-deps
+
       - name: Dependency Review
         uses: actions/dependency-review-action@v3
         with:
           config-file: >-
             ./.github/dependency-review-config.yml
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
