--- a/.github/workflows/2.2.continuous.delivery.yml
+++ b/.github/workflows/2.2.continuous.delivery.yml
@@ -1,16 +1,13 @@
-name: Package Delivery Artifacts & Pre-Release
+name: 2.2 Package Delivery Artifacts & Create Release
 
 on:
   push:
     tags:
-      - "*pre-release*"
+      - "*-release"
   workflow_dispatch: {}
 
 permissions:
-  discussions: write
   contents: write
-  packages: write
-  pages: write
 
 env:
   CI: true
@@ -21,13 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Setup GitHub Pages
-        uses: actions/configure-pages@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          enablement: "true"
+        uses: actions/checkout@v4
 
       - uses: actions/setup-python@v4
         with:
@@ -36,7 +27,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Build Site
         run: |
           # python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
@@ -54,9 +44,9 @@ jobs:
           app-id: ${{ vars.APP_ID_ACTIONS_ASSISTANT }}
           private-key: ${{ secrets.APP_PRIVATE_KEY_ACTIONS_ASSISTANT }}
 
-      - name: Create pre-release
+      - name: Draft release
         uses: actions/github-script@v6
-        id: create-pre-release
+        id: draft-release
         with:
           github-token: ${{ steps.generate-app-token.outputs.token }}
           script: |
@@ -66,11 +56,11 @@ jobs:
               {
                 owner: context.repo.owner,
                 repo: context.repo.repo,
+                draft: true,
                 tag_name: '${{ github.ref }}',
-                prerelease: true,
-                discussion_category_name: 'Announcement',
+                discussion_category_name: 'announcements',
                 generate_release_notes: true,
-                make_latest: 'true',
+                make_latest: 'legacy',
                 headers: {
                   'X-GitHub-Api-Version': '2022-11-28'
                 }
@@ -82,21 +72,36 @@ jobs:
             return response.data.id;
 
       - name: Upload release asset
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ steps.generate-app-token.outputs.token }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Content-Type: application/octet-stream" \
+            "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.draft-release.outputs.result }}/assets?name=${{ env.SITE_DIR }}.zip" \
+            --data-binary "@${{ env.SITE_DIR }}.zip"
+
+      - name: Publish release
         uses: actions/github-script@v6
+        id: publish-release
         with:
           github-token: ${{ steps.generate-app-token.outputs.token }}
           script: |
 
             const response = await github.request(
-              'POST /repos/{owner}/{repo}/releases/{release_id}/assets{?name,label}',
+              'PATCH /repos/{owner}/{repo}/releases/{release_id}',
               {
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                release_id: '${{ steps.create-pre-release.outputs }}',
-                name: '${{ env.SITE_DIR }}.zip',
-                data: '@${{ env.SITE_DIR }}.zip',
+                release_id: ${{ steps.draft-release.outputs.result }},
+                draft: false,
+                discussion_category_name: 'announcements',
+                make_latest: 'true',
                 headers: {
                   'X-GitHub-Api-Version': '2022-11-28'
                 }
               }
-            )
+            );
+
+            console.dir(response);
