--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -9,8 +9,6 @@ on:
 permissions:
   discussions: write
   contents: write
-  packages: write
-  pages: write
 
 env:
   CI: true
@@ -68,7 +66,7 @@ jobs:
                 repo: context.repo.repo,
                 tag_name: '${{ github.ref }}',
                 prerelease: true,
-                discussion_category_name: 'announcements',
+                # discussion_category_name: 'announcements',
                 generate_release_notes: true,
                 make_latest: 'true',
                 headers: {
