Fix upload release asset

--- a/.github/workflows/02.2.continuous.delivery.yml
+++ b/.github/workflows/02.2.continuous.delivery.yml
@@ -81,7 +81,7 @@ jobs:
               {
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                release_id: '${{ steps.create-pre-release.outputs }}',
+                release_id: '${{ steps.create-pre-release.outputs.result }}',
                 name: '${{ env.SITE_DIR }}.zip',
                 data: '@${{ env.SITE_DIR }}.zip',
                 headers: {
