Explicitly configure footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,13 @@ markdown_extensions:
 
   - pymdownx.tilde
 
+extra:
+  # Enable footer
+  generator: true
+copyright: >-
+  Copyright &copy; 2023
+  <a href="https://github.com/services" target="_blank">GitHub Expert Services</a>
+
 extra_javascript:
   # KATEX
   - assets/javascripts/katex.js
