--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,6 +145,7 @@ extra_javascript:
 
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
+  - assets/stylesheets/extra.css
 
 nav:
   - index.md
