--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # https://squidfunk.github.io/mkdocs-material/getting-started/#with-pip
 mkdocs
+mkdocs-glightbox
 mkdocs-material
 mkdocs-macros-plugin
 mkdocs-minify-plugin
