--- a/docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml
+++ b/docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml
@@ -26,7 +26,7 @@
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: python,javascript
+          languages: javascript
           setup-python-dependencies: "false"
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
