--- a/docs/exercises/02.secure.the.software.supply.chain/workflows/04.docker.yml
+++ b/docs/exercises/02.secure.the.software.supply.chain/workflows/04.docker.yml
@@ -1,7 +1,8 @@
 name: 2.3 (Optional) Package Container Image
 
 on:
-  workflow_dispatch: {}
+  pull_request:
+    branches: [ main ]
 
 permissions:
   contents: read
