Default to light theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,25 +28,25 @@ theme:
   locale: en
 
   palette:
+    # Palette toggle for automatic mode
+    - toggle:
+        icon: material/brightness-auto
+        name: Switch to dark mode
+      media: "(prefers-color-scheme)"
+
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to system preference
+      media: "(prefers-color-scheme: light)"
+
     # Palette toggle for dark mode
     - scheme: slate
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
       media: "(prefers-color-scheme: dark)"
-
-    # # Palette toggle for automatic mode
-    # - toggle:
-    #     icon: material/brightness-auto
-    #     name: Switch to dark mode
-    #   media: "(prefers-color-scheme)"
-
-    # # Palette toggle for light mode
-    # - scheme: default
-    #   toggle:
-    #     icon: material/brightness-7
-    #     name: Switch to system preference
-    #   media: "(prefers-color-scheme: light)"
 
   features:
     - content.action.edit
