--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,5 +167,6 @@ nav:
           - exercises/02.secure.the.software.supply.chain/02-extra.md
       - Automate-Release:
           - exercises/03.automate.release/index.md
+          - exercises/03.automate.release/00.md
           - exercises/03.automate.release/01.md
   - Tetris Game: .tetris.game/index.html
