--- a/reference.implementations/workflows/2.1.continuous.delivery.yml
+++ b/reference.implementations/workflows/2.1.continuous.delivery.yml
@@ -54,7 +54,7 @@ jobs:
           if git tag -a "$new_version" -m "Version $new_version"; then
             git push --follow-tags origin "$new_version"
           else
-            echo "Failed to creat tag $new_version, it probably already exists"
+            echo "Failed to create tag $new_version, it probably already exists"
           fi
         env:
           new_version: ${{ steps.get_new_version.outputs.new_version }}-release
