--- a/reference.implementations/workflows/1.1.continuous.integration.yml
+++ b/reference.implementations/workflows/1.1.continuous.integration.yml
@@ -33,17 +33,36 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.ci.txt
+          # Set the `CODEQL-PYTHON` environment variable to the Python executable
+          # that includes the dependencies
+          echo "CODEQL_PYTHON=$(which python)" >> $GITHUB_ENV
           npm ci
+          # Install browsers for running functional tests
           npx playwright install --with-deps chromium
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: python, javascript
+          setup-python-dependencies: false
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
 
       - name: Build
         run: |
           python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
 
-      - name: Functional test
-        run: |
-          npx playwright test
+      - name: Functional Test
+        run: npx playwright test
+
+      - name: Upload Functional Test Report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
