--- a/reference.implementations/workflows/1.2.continuous.integration.yml
+++ b/reference.implementations/workflows/1.2.continuous.integration.yml
@@ -7,8 +7,10 @@ on:
 
 permissions:
   actions: write
+  checks: write
   contents: read
   security-events: write
+  pull-requests: write
 
 env:
   CI: true
@@ -22,26 +24,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.12
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Install Python Dependencies
+
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.ci.txt
-      - name: Install NodeJS Dependencies
-        run: npm ci
-      - name: Test Site Build
+          # Set the `CODEQL-PYTHON` environment variable to the Python executable
+          # that includes the dependencies
+          echo "CODEQL_PYTHON=$(which python)" >> $GITHUB_ENV
+          npm ci
+          # Install browsers for running functional tests
+          npx playwright install --with-deps chromium
+
+      - name: Build
         run: |
           python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
-      - name: Run UI Test
+
+      - name: Functional Test
         run: npx playwright test
-      - name: Upload UI Test Report
+
+      - name: Upload Functional Test Report
         uses: actions/upload-artifact@v3
         if: always()
         with:
