Target only javascript for code scanning
This is because we do not have actual python codes asides from used packages

--- a/reference.implementations/workflows/1.1.continuous.integration.yml
+++ b/reference.implementations/workflows/1.1.continuous.integration.yml
@@ -37,9 +37,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.ci.txt
-          # Set the `CODEQL-PYTHON` environment variable to the Python executable
-          # that includes the dependencies
-          echo "CODEQL_PYTHON=$(which python)" >> $GITHUB_ENV
           npm ci
           # Install browsers for running functional tests
           npx playwright install --with-deps chromium
@@ -47,7 +44,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: python, javascript
+          languages: javascript
           setup-python-dependencies: false
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
